workspace = { members = [ "hello_macro","hello_macro_derive", "factory"] }
[package]
name = "learning_rust_in_action"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "chapter1"
path = "src/chapter1/main.rs"


[dependencies]
hello_macro = {path = "hello_macro"}
hello_macro_derive = {path = "hello_macro_derive"}
factory = {path = "factory"}
